# ===================================================================
# Build System Configuration
# ===================================================================
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# ===================================================================
# Project Metadata (PEP 621)
# ===================================================================
[project]
# --- IMPORTANT: Change this to your project's actual name ---
name = "doc_test_2" 
version = "0.1.0"
description = "A project to demonstrate documentation workflows."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
  { name = "Aarav Agarwal", email = "your-email@example.com" },
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# Runtime dependencies would go here (currently none)
dependencies = []

# ===================================================================
# Optional Dependencies (Extras)
# ===================================================================
[project.optional-dependencies]
dev = [
    "ruff",
    "uv",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autoapi",
]

# ===================================================================
# Tool Configurations
# ===================================================================
[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W", "I"]
exclude = [
    ".git",
    ".venv",
    "docs",
]
